Fix: Add Squarespace Dark Mode Icon
Squarespace icon now work correctly on dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1629,7 +1629,7 @@ Table Of Contents:
     background-image: url("https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/aws-colored.svg") !important;
   }
   html.dark .aws.colored {
-    background-image: url("https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/aws-colored.svg") !important;
+    background-image: url("https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/aws-colored-dark.svg") !important;
   }
   .blender.icon-bg {
     background-image: url("https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/blender.svg") !important;
